Update to registration link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
        */}}
 
         <div class="summary">
-            <a href="https://reseau.ovation.ca/pesite.asp?CodeSalleSpectacle=1400N6&Lang=fr>">
+            <a href="https://reseau.ovation.ca/Reservation/Billets/ChoixBillets.asp?CodeRepresentation=140132&LP=27Mw756&PER=276ei56&Lang=FR&CodeSiteClient=00001R">
                 <div>
                     <img src="/images/banniere-table-ronde-nov2022.jpeg" alt="Invitation table ronde"
                             class='img-fluid mb-5 mh-100'>
