--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -8,3 +8,5 @@
 @import 'components/overlay';
 @import 'components/social-icons';
 @import 'components/summary';
+
+@import "bootstrap/scss/bootstrap";
