--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<meta property="og:url" content="{{ .Permalink }}"></meta>
-	<meta property="og:title" content="{{ .Title }}"></meta>	
-	<meta property="og:type" content="article"></meta>
-	<meta property="og:description" content="{{ .Site.Params.description }}"></meta>
+	<meta property="og:url" content="{{ .Permalink }}" />
+	<meta property="og:title" content="{{ .Title }}" />
+	<meta property="og:type" content="article" />
+	<meta property="og:description" content="{{ .Site.Params.description }}" />
 	<meta name="description" content="{{ .Site.Params.description }}" />
 	<meta name="keywords" content="{{ .Site.Params.keywords }}" />
 	<link rel="canonical" href="{{ .Permalink }}" />
@@ -26,8 +26,9 @@
 
     {{ partial "head/ga.html" . }}
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    {{/*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">*/}}
 
+    {{/*
     {{ $styles := resources.Get "sass/main.scss" | resources.ToCSS }}
     {{ if .Site.IsServer }}
       <link rel="stylesheet" href="{{ $styles.RelPermalink }}"/>
@@ -35,6 +36,12 @@
       {{ $styles := $styles | resources.Minify | resources.Fingerprint  }}
       <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}"/>
     {{ end }}
+    */}}
+
+    
+    <!-- <script>const global = globalThis;</script>  -->
+    <script type="module" src="/assets/js/main.tsx"></script>
+
 </head>
 <body>
     <div class="d-flex flex-column justify-content-between min-vh-100">
@@ -42,8 +49,11 @@
            
         <div class="mt-4 w-75 mx-auto">
             {{ block "main" . }}{{ end }}
+            
         </div>
     
+        
+
         {{ partial "footer/site-footer.html" . }}
    
     </div>
