Add gallery component

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'footer/site-footer';
 
 @import 'components/carousel';
+@import 'components/gallery';
 @import 'components/grid-images';
 @import 'components/grid-projets';
 @import 'components/overlay';
