--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,19 +11,33 @@
        </div>
        */}}
 
+    <div class="summary">
+        <a href="https://www.lafabriqueculturelle.tv/capsules/14628/pour-beaucoup-d-obscurite-quelques-eclats-projet-de-mediation-culturelle-de-myriam-tousignant" class=''>
+            <div class="overlay__container">
+                <img src="/images/banniere_beaucoup_obscrite.jpg" alt="La Fabrique Culturelle - Pour beaucoup d’obscurité, quelques éclats" class='img-fluid mb-5 mh-100'>
+                <div class="overlay__middle">   
+                    <div class="overlay__summary">La Fabrique Culturelle - Pour beaucoup d’obscurité, quelques éclats</div>
+                </div>
+            </div>
+        </a>        
+    </div>
+    
+    {{ range where (where .Site.Pages "Section" "mediations") "Params.Featured" true }}
+        {{ .Render "summary" }}
+    {{ end }}  
 
     {{ range where (where .Site.Pages "Section" "projets") "Params.Featured" true }}
         {{ .Render "summary" }}
-    {{ end }}      
-       {{ range where (where .Site.Pages "Section" "expositions") "Params.Featured" true }}
+    {{ end }}           
+
+    {{ range where (where .Site.Pages "Section" "expositions") "Params.Featured" true }}
        {{ .Render "summary" }}
-   {{ end }} 
-   {{ range where (where .Site.Pages "Section" "livres-artiste") "Params.Featured" true }}
-   {{ .Render "summary" }}
-{{ end }} 
-       {{ range where (where .Site.Pages "Section" "mediations") "Params.Featured" true }}
-       {{ .Render "summary" }}
-     {{ end }}       
+    {{ end }}
+
+    {{ range where (where .Site.Pages "Section" "livres-artiste") "Params.Featured" true }}
+        {{ .Render "summary" }}
+    {{ end }} 
+       
     {{ range where (where .Site.Pages "Section" "art-public") "Params.Featured" true }}
        {{ .Render "summary" }}
     {{ end }}
