--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,13 +28,23 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-    {{ $styles := resources.Get "sass/main.scss" | resources.ToCSS }}
-    {{ if .Site.IsServer }}
-      <link rel="stylesheet" href="{{ $styles.RelPermalink }}"/>
-    {{ else }}
-      {{ $styles := $styles | resources.Minify | resources.Fingerprint  }}
-      <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}"/>
+    {{ with resources.Get "sass/main.scss" }}
+    {{ $opts := dict
+      "enableSourceMap" (not hugo.IsProduction)
+      "outputStyle" (cond hugo.IsProduction "compressed" "expanded")
+      "targetPath" "css/main.css"
+      "transpiler" "dartsass"
+    }}
+    {{ with . | toCSS $opts }}
+      {{ if hugo.IsProduction }}
+        {{ with . | fingerprint }}
+          <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
+        {{ end }}
+      {{ else }}
+        <link rel="stylesheet" href="{{ .RelPermalink }}">
+      {{ end }}
     {{ end }}
+  {{ end }}    
 </head>
 <body>
     <div class="d-flex flex-column justify-content-between min-vh-100">
