--- a/layouts/partials/head/ga.html
+++ b/layouts/partials/head/ga.html
@@ -1,10 +1,10 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.GoogleAnalytics }}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Config.Services.GoogleAnalytics.ID }}"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', '{{ .Site.GoogleAnalytics }}');
+    gtag('config', '{{ .Site.Config.Services.GoogleAnalytics.ID }}');
 </script>
 <!-- END Google Analytics -->
